# gpt-rescript

./: .gitignore  README.md  template.md
files/: brightid--authserver.md  brightid--commandsinvite.md  brightid--entryclient.md  brightid--entryresserver.md  catala-dsfr--app.md  catala-dsfr--form.md  catala-dsfr--spinners.md  chat-script--backend--app.md  chat-script--message-json.md  fullstack--app.md  res-x--client.md  res-x--h.md  res-x--htmx.md  res-x--resxclient.md
files-v1/: brightid--brightid.md  brightid--buttonssponsor.md  brightid--deploycommands.md  brightid--root.md  brightid--sidebar.md  catala-dsfr--dsfr.md  catala-dsfr--router.md  chat-script--chat-input.md  chat-script--message-toclient.md  chat-script--server.md  fullstack--examples.md  res-x--bunutils.md  res-x--devs.md  res-x--handlers.md  res-x--react.md  res-x--reactdom.md  res-x--staticexporter.md
files/examples/: brightid--bot.md  brightid--discorserver.md  brightid--env.md  brightid--reactprosidebar.md  brightid--remixauth.md  brightid--servicessponsor.md  catala-dsfr--allocation.md  catala-dsfr--sourcecode.md  chat-script--app.md  chat-script--chat-box.md
markdown-to-pdf-converter/: README.md  docs.html  examples.html  main.py  pyproject.toml
